# diebold-yilmaz

./: README.md  pyproject.toml
diebold_yilmaz/: __init__.py  core.py  fit.py  rolling.py
examples/: quickstart.py
tests/: test_core.py  test_v02.py
